# zenith

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
assets/fonts/: ABOUT.txt
examples/: README.md  bold.zen  center.tx.json  code.zen  frame.zen  italic.zen  pattern.zen  richtext.zen
npm/zenith-mcp/: package-lock.json  package.json
plugins/zenith/: README.md
zenith-cli/: Cargo.toml
zenith-cli/src/: cli.rs  config.rs  dispatch.rs  history.rs  json_types.rs  lib.rs  library.rs
zenith-cli/tests/: diagnostic_policy_config.rs  history_sync.rs  merge_pipeline.rs  new.rs  plugin.rs  render_determinism.rs  render_integration.rs  render_policy.rs  tx_pipeline.rs  variant_pipeline.rs  workspace.rs
zenith-core/: Cargo.toml
zenith-core/src/: diag_catalog.rs  lib.rs  schema.rs
zenith-core/tests/: format_chart.rs  format_nodes.rs  format_pattern.rs  format_recipes.rs  format_variants.rs  (+15 more)
zenith-layout/: Cargo.toml
zenith-render/: Cargo.toml
zenith-scene/: Cargo.toml
zenith-session/: Cargo.toml
zenith-tx/: Cargo.toml
zenith-tx/src/: engine.rs  lib.rs  merge.rs  op.rs  result.rs  schema.rs
zenith-tx/src/engine/: flags.rs  geometry.rs  mod.rs  pattern.rs  structure.rs  style.rs  tests.rs
zenith-tx/src/engine/structure/: duplicate.rs  finders.rs  group.rs  mod.rs  reorder.rs
zenith-tx/src/schema/: examples.rs  fields.rs  names.rs  summaries.rs  tests.rs
zenith-tx/tests/: add_remove.rs  align_distribute.rs  pattern_ops.rs  set_ops.rs  structure.rs  table_cell_ops.rs  transaction.rs
zenith-tx/tests/common/: mod.rs
(+253 files in other folders)
