[package]
name = "zenith-tx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
zenith-core = { path = "../zenith-core" }
zenith-scene = { path = "../zenith-scene" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
